dataset samples for demo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,30 @@
 version: '3'
 services:
-  solr:
-    image: librairy/solr:8.2
-    container_name: librairy-solr
-    ports:
-     - "8983:8983"
-    environment:
-      - SOLR_JAVA_MEM=-Xms256m -Xmx256m
+  repo:
+    image: librairy/repo:latest
+    container_name: librairy-repo
+    ports: [8983:8983]
+    networks:
+      - net
   api:
     image: librairy/api:latest
     container_name: librairy-api
-    ports:
-      - "8081:7777"
+    ports: [8081:7777]
     volumes:
       - ./input:/librairy/input
+      - ./batch:/librairy/batch
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - NLP_ENDPOINT=http://librairy.linkeddata.es/nlp
       - LIBRAIRY_API_USERS=demo:2019
-      - JAVA_OPTS=-Xmx512m
+    networks:
+      - net
   explorer:
     image: librairy/explorer:latest
     container_name: librairy-explorer
-    ports:
-      - "8080:80"
+    ports: [8080:80]
+    networks:
+      - net
+networks:
+  net:
+    driver: bridge
