--- a/models/docker-compose.yml
+++ b/models/docker-compose.yml
@@ -6,6 +6,18 @@ services:
     ports: [7777:7777]
     networks:
       - demo_net
+#  model-es:
+#    image: <user-name>/demo-model-es
+#    container_name: model-es
+#    ports: [7778:7777]
+#    networks:
+#      - demo_net
+#  model-fr:
+#    image: librairy/demo-model-fr
+#    container_name: model-fr
+#    ports: [7779:7777]
+#    networks:
+#      - demo_net
 networks:
   demo_net:
     external: true
